2025-03-04  Per Abrahamsen  <pa@plen.ku.dk>

	* include/daisy/chemicals/adsorption.h: 
	* src/daisy/chemicals/adsorption.C (M_to_C_bisect):
	New function.
	* src/daisy/chemicals/adsorption_Python.C (M_to_C): Use
	'M_to_C_bisect' if no Python function is specified.

2025-03-03  Per Abrahamsen  <pa@plen.ku.dk>

	* src/daisy/chemicals/reaction_Python.C: New model.
	* src/daisy/chemicals/CMakeLists.txt: Add it.

2025-02-28  Per Abrahamsen  <pa@plen.ku.dk>

	* include/daisy/chemicals/reaction.h:
	* include/daisy/chemicals/chemistry.h (initialize): Take
	'chemistry' parameter.

2025-02-10  Per Abrahamsen  <pa@plen.ku.dk>

	* src/daisy/upper_boundary/bioclimate/resistance.C
	(Resistance::T_c): Fix parenthesis.

2025-01-29  Per Abrahamsen  <pa@plen.ku.dk>

	* src/daisy/crop/stomatacon_SHA.C (MNA): Mark obsolete.

	* src/daisy/crop/root/rubiscoNdist_DPF.C (f_photo): Removed
	parameter, redundant as cropN is already set to rubiscoN.

	* src/daisy/upper_boundary/bioclimate/difrad_DPF.C (fa): Fix
	default value and description.

	* src/daisy/upper_boundary/vegetation/vegetation_crops.C
	(LAIvsDAY): Switch domain and range.

2025-01-28  Per Abrahamsen  <pa@plen.ku.dk>

	* src/programs/program_astdump.C: New model.

	* src/object_model/units.C (Units::get_convertion): Suppress false
	positive "Wdangling-reference" warning.

2025-01-27  Per Abrahamsen  <pa@plen.ku.dk>

	* src/object_model/model.C (Model::obsolete)
	(Model::declare_obsolete): New functions.
	* src/daisy/lower_boundary/groundwater_static.C (load_frame): Use them.
	* src/daisy/output/log_alist.C (LogSubmodel::close_unnamed): Make
	sentry a symbol.
	* src/object_model/parser_file.C (load_list): Support them.

2025-01-17  Per Abrahamsen  <pa@plen.ku.dk>

	* src/daisy/chemicals/adsorption_langmuir.C (C_to_M, M_to_C): Fix.

2025-01-16  Per Abrahamsen  <pa@plen.ku.dk>

	* lib/log.dai ("Drain Sink Water", "Biopore Drain Sink Water"):
	Fix units.
	("Drain Sink NO3", "Drain Sink NH4"): Remove dimension.