@@ -1,4 +1,5 @@
 target_sources(${DAISY_CORE_NAME} PRIVATE
+  adsorption_air.C
   reaction_Python.C
   denprod_Parton1996.C
   denprod.C
