@@ -67,6 +67,17 @@
   year={1963}
 }
 
+@Article{henry2023,
+  author = 	 {Rolf Sander},
+  title = 	 {Compilation of {H}enry’s law constants (version 5.0.0)
+                  for water as solvent},
+  journal = 	 {Atmospheric Chemistry and Physics},
+  year = 	 2023,
+  doi =          {10.5194/acp-23-10901-2023},
+  volume = 	 23,
+  number = 19,
+  pages = 	 {10901--12440}}
+
 @article{Parton1996,
   title={Generalized model for {N2} and {N2O} production from nitrification and denitrification},
   author={Parton, WJ and Mosier, AR and Ojima, DS and Valentine, DW and Schimel, DS and Weier, K and Kulmala, Airi E},
